Fixed spacing errors

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ section {
 
 .about-containers {
     gap: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: -1rem;
     margin-top: 2rem;
 }
 
@@ -344,7 +344,6 @@ section {
 article {
     display: flex;
     width: 10rem;
-    justify-content: space-around;
     gap: 0.5rem;
 }
 
